Use java-based json schem validator. This also prompted the change from using JBoss DMR to Jackson for representing the configuration. Only the core is now converted, while the rest of the modules still use the, now deprecated, ModelNode based methods.